State recovery and injection based action creation